--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -39,7 +39,13 @@
 
 #portfolio{
     margin:auto 20px;
+    margin-top: 30px;
 }
+
+#portfolio h4{
+    margin-top: 20px;
+}
+
 .portfolio-card img{
     width: 100%;
     max-height: 230px;
